@@ -10,7 +10,7 @@ useDynLib(SeqArray,
     SEQ_SplitSelection, SEQ_SplitSelectionX,
     SEQ_GetSpace, SEQ_Summary, SEQ_System,
     SEQ_VCF_NumLines, SEQ_VCF_Split, SEQ_VCF_Parse,
-    SEQ_ToVCF_Init, SEQ_ToVCF_Done, SEQ_ToVCF, SEQ_ToVCF_Di_WrtFmt,
+    SEQ_ToVCF_Init, SEQ_ToVCF_Done,
     SEQ_Quote, SEQ_GetData, SEQ_Apply_Variant, SEQ_Apply_Sample,
     SEQ_BApply_Variant,
     SEQ_ConvBED2GDS,
@@ -29,7 +29,8 @@ import(methods)
 import(gdsfmt)
 importFrom(parallel, clusterApply, clusterApplyLB, clusterCall, detectCores,
     makeCluster, makeForkCluster, mclapply, stopCluster)
-importFrom(utils, read.table, flush.console, write.table, str, tail)
+importFrom(utils, read.table, flush.console, write.table, str, tail,
+    type.convert)
 
 importFrom(S4Vectors, DataFrame, SimpleList)
 importClassesFrom(IRanges, IRanges)
